--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.64    Sat Jan 17 13:33:57 GMT 2015
+
+* Resolve an edge-case with DEPRECATED
+  [ https://rt.cpan.org/Public/Bug/Display.html?id=101555 ]
+
 0.62    Fri Jan 24 15:52:44 GMT 2014
 
 * Resolve test failures on v5.16.x
