--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.68    Fri Jul 29 08:01:12 BST 2016
+
+* Fix unconditional @INC localisation
+
 0.66    Wed Jul 27 08:22:53 BST 2016
 
 * Add FORCE_SAFE_INC option to fix CVE-2016-1238
